--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,8 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # Required to push back to the repo
+      contents: write
+      packages: write
     steps:
       - uses: actions/checkout@v3
         with:
