--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -106,7 +106,7 @@ jobs:
       - name: Update Deployment Manifest
         working-directory: .
         run: |
-          IMAGE_TAG=$(echo "${{ steps.meta.outputs.tags }}" | awk -F',' '{print $NF}')
+          IMAGE_TAG=$(echo "${{ steps.meta.outputs.tags }}" | awk -F' ' '{print $NF}')
           echo "Using image tag: $IMAGE_TAG"
           sed -i "s|image: .*|image: $IMAGE_TAG|" k8s/api-deployment.yaml
 
