--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -104,18 +104,22 @@ jobs:
         # against the sigstore community Fulcio instance.
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
 
-      - name: Update Deployment Manifest
-        working-directory: .
+      - name: Extract Image Tag
+        id: extract_tag
         run: |
-          IMAGE_TAG=${{ fromJSON(steps.meta.outputs.json).tags[1] }}
+          IMAGE_TAG=$(jq -r '.tags[1]' <<< '${{ steps.meta.outputs.json }}')
           echo "Using image tag: $IMAGE_TAG"
-          sed -i "s|image: .*|image: $IMAGE_TAG|" k8s/api-deployment.yaml
+          echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+      - name: Update Deployment Manifest
+        run: |
+          sed -i "s|image: .*|image: ${{ steps.extract_tag.outputs.image_tag }}|" k8s/api-deployment.yaml
 
       - name: Commit and Push Manifest Update
-        working-directory: .
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add k8s/api-deployment.yaml
-          git commit -m "Update image to $IMAGE_TAG" || echo "No changes to commit"
+          git commit -m "Update image to ${{ steps.extract_tag.outputs.image_tag }}" || echo "No changes to commit"
           git push
+
