--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -18,7 +18,7 @@ spec:
           image: ghcr.io/northo/k8s-webserver-with-inference-job-demo:sha-4825d89
           env:
             - name: ARGO_HOST
-              value: "http://argo-server.argo.svc:2746"
+              value: "https://argo-server.argo.svc:2746"
           ports:
             - containerPort: 8000
           resources:
