wip: add output artifact

--- a/k8s/demo/workflow.yaml
+++ b/k8s/demo/workflow.yaml
@@ -13,6 +13,10 @@ spec:
       inputs:
         parameters:
           - name: message
+      outputs:
+        artifacts:
+          - name: the-script
+            path: /app/main.py
       container:
         image: busybox
         command: [echo]
