🐛 Set key in s3 on artifact

--- a/k8s/demo/workflow.yaml
+++ b/k8s/demo/workflow.yaml
@@ -17,6 +17,8 @@ spec:
         artifacts:
           - name: the-script
             path: /app/main.py
+            s3:
+              key: "{{workflow.uid}}"
       container:
         image: busybox
         command: [echo]
