--- a/k8s/argo-workflows/kustomization.yaml
+++ b/k8s/argo-workflows/kustomization.yaml
@@ -2,3 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - https://github.com/argoproj/argo-workflows/releases/download/v3.6.10/quick-start-minimal.yaml
+patches:
+  - target:
+      group: ""
+      version: v1
+      kind: ConfigMap
+      name: artifact-repositories
+    path: cm-artifact-repo-patch.yaml
