Set archive mode to none

--- a/k8s/demo/workflow.yaml
+++ b/k8s/demo/workflow.yaml
@@ -18,6 +18,8 @@ spec:
           - name: modified-message
             globalName: modified-message
             path: /tmp/message-out.txt
+            archive:
+              none: {}
       container:
         image: busybox
         command: [sh, -c]
