--- a/.github/workflows/build-api-docker.yaml
+++ b/.github/workflows/build-api-docker.yaml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - apps/api/**
+      - .github/workflows/build-api-docker.yaml
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}-api
@@ -15,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       packages: write
+      contents: read
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
