--- a/.github/workflows/build-api-docker.yaml
+++ b/.github/workflows/build-api-docker.yaml
@@ -17,6 +17,7 @@ jobs:
     permissions:
       packages: write
       contents: read
+      id-token: write
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
