--- a/k8s/demo/deployment.yaml
+++ b/k8s/demo/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: job-submitter
-  namespace: default
+  name: demo-api
+  namespace: demo
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: job-submitter
+      app: demo-api
   template:
     metadata:
       labels:
-        app: job-submitter
+        app: demo-api
     spec:
-      serviceAccountName: storage-account-sa
+      serviceAccountName: demo-api-s
       containers:
-        - name: app
+        - name: api
           image: ghcr.io/northo/k8s-webserver-with-inference-job-demo-api:sha-50a9981
           env:
             - name: ARGO_HOST
