--- a/k8s/demo/service.yaml
+++ b/k8s/demo/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: job-submitter
-  namespace: default
+  name: demo-api
+  namespace: demo
 spec:
   selector:
-    app: job-submitter
+    app: demo-api
   ports:
     - protocol: TCP
       port: 80
