--- a/k8s/demo/rbac.yaml
+++ b/k8s/demo/rbac.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: submit-workflows
-  namespace: argo-workflows
+  namespace: argo
 rules:
   - apiGroups: ["argoproj.io"]
     resources: ["workflows", "workflowtemplates"]
@@ -13,7 +13,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: bind-demo-api
-  namespace: argo-workflows
+  namespace: argo
 subjects:
   - kind: ServiceAccount
     name: demo-api-sa
