--- a/k8s/demo/ingress.yaml
+++ b/k8s/demo/ingress.yaml
@@ -3,13 +3,16 @@ kind: Ingress
 metadata:
   name: demo-api-ingress
   namespace: demo
+  annotations:
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
   - http:
       paths:
-      - path: /demo-api
-        pathType: Prefix
+      - path: /demo-api(/|$)(.*)
+        pathType: ImplementationSpecific
         backend:
           service:
             name: demo-api
