--- a/k8s/demo/ingress.yaml
+++ b/k8s/demo/ingress.yaml
@@ -4,15 +4,17 @@ metadata:
   name: demo-api-ingress
   namespace: demo
   annotations:
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/auth-type: "basic"
+    nginx.ingress.kubernetes.io/auth-secret: "basic-auth"
+    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
 spec:
   ingressClassName: nginx
   rules:
-  - http:
+  - host: demo-api.135-236-207-61-sslip.io
+    http:
       paths:
-      - path: /demo-api(/|$)(.*)
-        pathType: ImplementationSpecific
+      - path: /
+        pathType: Prefix
         backend:
           service:
             name: demo-api
