✏️ Fix sslip typo

--- a/k8s/demo/ingress.yaml
+++ b/k8s/demo/ingress.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: demo-api.135-236-207-61-sslip.io
+  - host: demo-api.135-236-207-61.sslip.io
     http:
       paths:
       - path: /
