--- a/k8s/demo/ingress.yaml
+++ b/k8s/demo/ingress.yaml
@@ -3,6 +3,10 @@ kind: Ingress
 metadata:
   name: demo-api-ingress
   namespace: demo
+  annotations:
+    nginx.ingress.kubernetes.io/auth-type: "basic"
+    nginx.ingress.kubernetes.io/auth-secret: "basic-auth"
+    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
 spec:
   ingressClassName: nginx
   rules:
