--- a/k8s/argo-workflows/kustomization.yaml
+++ b/k8s/argo-workflows/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - https://github.com/argoproj/argo-workflows/releases/download/v3.6.10/quick-start-minimal.yaml
+  - ingress.yaml
 patches:
   - target:
       group: ""
