🐛 Fix ingress port name

--- a/k8s/argo-workflows/ingress.yaml
+++ b/k8s/argo-workflows/ingress.yaml
@@ -18,7 +18,7 @@ spec:
           service:
             name: argo-server
             port:
-              name: http
+              name: web
   tls:
   - hosts:
     - workflows.20.13.208.23.sslip.io
