✨ Set up basic auth for workflows

--- a/k8s/argo-workflows/ingress.yaml
+++ b/k8s/argo-workflows/ingress.yaml
@@ -6,6 +6,9 @@ metadata:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
     nginx.ingress.kubernetes.io/backend-protocol: https  # Probably better to disable TLS in the service, but this works for now
+    nginx.ingress.kubernetes.io/auth-type: "basic"
+    nginx.ingress.kubernetes.io/auth-secret: "basic-auth-workflows"
+    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
 spec:
   ingressClassName: nginx
   rules:
