--- a/apps/api/docker-compose.yaml
+++ b/apps/api/docker-compose.yaml
@@ -6,5 +6,15 @@ services:
       - "8000:8000"
     environment:
       - ARGO_HOST=https://host.docker.internal:2746
-
-      
+    env_file:
+      - .env
+    command: [".venv/bin/uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    develop:
+      watch:
+        - action: sync
+          path: .
+          target: /app
+          ignore:
+            - .venv/
+        - action: rebuild
+          path: ./pyproject.toml 
