🔐 (workflows): Use managed identity for artifact store

--- a/k8s/argo-workflows/cm-artifact-repo-patch.yaml
+++ b/k8s/argo-workflows/cm-artifact-repo-patch.yaml
@@ -11,6 +11,4 @@ data:
       endpoint: https://k8sdemopeacefuldragon.blob.core.windows.net
       container: workflows-artifacts
       blobNameFormat: "{{workflow.name}}/{{pod.name}}"
-      accountKeySecret:
-        name: my-azure-storage-credentials
-        key: account-access-key
+      useSDKCreds: true
