--- a/k8s/argocd/values.yaml
+++ b/k8s/argocd/values.yaml
@@ -1,5 +1,5 @@
 global:
-  domain: argocd.20.13.208.23.sslip.io
+  domain: ""
 
 configs:
   params:
@@ -13,17 +13,14 @@ server:
       nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
       nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
       cert-manager.io/cluster-issuer: letsencrypt-production
-    extraTls:
-      - hosts:
-        - argocd.20.13.208.23.sslip.io
-        secretName: ingress-argocd-http-tls
+    tls: true
+    tlsSecretName: ingress-argocd-http-tls
+
   ingressGrpc:
     enabled: true
     ingressClassName: nginx
     annotations:
       nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
       cert-manager.io/cluster-issuer: letsencrypt-production
-    extraTls:
-      - hosts:
-        - grpc.argocd.20.13.208.23.sslip.io
-        secretName: ingress-argocd-grpc-tls
+    tls: true
+    tlsSecretName: ingress-argocd-grpc-tls
