✏️ (docs): Fix typo

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ nav:
     - demo_app/platform.md
     - demo_app/the_app.md
   - lessons.md
-  - Prpresentation:
+  - Presentation:
     - presentation/index.md
     - presentation/copy-paste.md
     - presentation/exercises.md
