🐛 Correct client id in demo sa

--- a/k8s/demo/serviceaccount.yaml
+++ b/k8s/demo/serviceaccount.yaml
@@ -4,4 +4,5 @@ metadata:
   name: demo-api-sa
   namespace: demo
   annotations:
-    azure.workload.identity/client-id: "/subscriptions/08c38d25-f29d-4354-9240-07269d516415/resourceGroups/k8s-demo-application/providers/Microsoft.ManagedIdentity/userAssignedIdentities/aks-storage-identity"
+    azure.workload.identity/client-id: 74fb1b05-9547-4b0f-8987-e96aefc31664
+
