✨ Set demo api deployment to use managed identity

--- a/k8s/demo/deployment.yaml
+++ b/k8s/demo/deployment.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: demo-api
+        azure.workload.identity/use: "true"
     spec:
       serviceAccountName: demo-api-sa
       containers:
